--- a/beyonder/bootstrap/scss/utilities/_background.scss
+++ b/beyonder/bootstrap/scss/utilities/_background.scss
@@ -18,6 +18,10 @@
   background-color: transparent !important;
 }
 
-.bg-soft-transparency{
+.bg-soft-transparency-dark{
   background-color: rgba(0, 0, 0, 0.75) !important;
+}
+
+.bg-soft-transparency-light{
+  background-color: rgba(255, 255, 255, 0.75) !important;
 }
